# pc-rep-workshop-website

./: Cargo.toml  README.md  copytoserver.sh  index.html  index.scss  style.scss
src/: lib.rs  main.rs  router.rs
src/components/: mod.rs
src/components/atoms/: footer.rs  mod.rs  navbar_item.rs  navbar_logo.rs
src/components/molecules/: mod.rs  navbar.rs  navbar_items.rs
src/components/organisms/: footer.rs  header.rs  navbar.rs
src/components/pages/: about.rs  home.rs  mod.rs
src/components/pages/games/: mod.rs  page.rs
src/stores/: local.rs  mod.rs  session.rs
styles/: body.scss  footer.scss  header.scss  style.scss
styles/pages/: 404.scss  about.scss  home.scss
