[package]
name = "pc-rep-workshop-website"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
error-chain = "0.12.4"
futures = "0.3.21"
gloo = "0.8.0"
reqwasm = "0.5.0"
serde = "1.0.137"
serde_json = "1.0.81"
stylist = { version = "0.10.0", features = ["yew"] }
wasm-bindgen = "0.2.80"
wasm-bindgen-futures = "0.4.31"
web-sys = { version = "0.3.57", features = ["HtmlInputElement", "Event"] }
ybc = "0.2.1"
yew = "0.19.3"
yew-router = "0.16.0"
yewdux = "0.7.0"
yewdux-functional = "0.1.0"
